WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
150563
WebKitTestRunner leaks in generateWhitelist()
https://bugs.webkit.org/show_bug.cgi?id=150563
Summary
WebKitTestRunner leaks in generateWhitelist()
Alexey Proskuryakov
Reported
2015-10-26 10:01:38 PDT
The bot doesn't see that, because it's WebKit1.
Attachments
proposed fix
(1.19 KB, patch)
2015-10-26 10:03 PDT
,
Alexey Proskuryakov
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2015-10-26 10:03:42 PDT
Created
attachment 264048
[details]
proposed fix
Andreas Kling
Comment 2
2015-10-27 13:59:55 PDT
Comment on
attachment 264048
[details]
proposed fix r=me
WebKit Commit Bot
Comment 3
2015-10-27 14:48:00 PDT
Comment on
attachment 264048
[details]
proposed fix Clearing flags on attachment: 264048 Committed
r191642
: <
http://trac.webkit.org/changeset/191642
>
WebKit Commit Bot
Comment 4
2015-10-27 14:48:02 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug