WebKitTestRunner leaks in generateWhitelist() https://bugs.webkit.org/show_bug.cgi?id=150563

Reviewed by Andreas Kling.

* WebKitTestRunner/mac/TestControllerMac.mm:
(WTR::generateWhitelist):


Canonical link: https://commits.webkit.org/168760@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@191642 268f45cc-cd09-0410-ab3c-d52691b4dbfc